<resources>
    <string name="app_name">IronDolphinMusicPlayer</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="channel_name">Iron Dolphin Music Player</string>
    <string name="channel_desc">Playbacks local music files</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="track">Track</string>
    <string name="album">Album</string>
    <string name="default_duration">0:00</string>
    <string name="home">Home</string>
    <string name="tabplayer">TabPlayer</string>
    <string name="statistics">Statistics</string>
    <string name="test">Test</string>
    <string name="album_cover">album cover</string>
    <string name="logo">Logo</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="subtitle">Subtitle</string>
    <string name="permission_info">We need a permission to load song files from your local storage</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="queue">Queue</string>
    <string name="playpausebutton">playPauseButton</string>
    <string name="idmp">IronDolphinMusicPlayer</string>
    <string name="repeat_button">repeat button</string>
    <string name="shuffle_button">shuffle button</string>
    <string name="next_button">next button</string>
    <string name="play_pause_button">play pause button</string>
    <string name="previous_button">previous button</string>
</resources>