<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_outdoor_grill_24"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_tabPlayer"
                android:icon="@drawable/ic_baseline_outdoor_grill_24"
                android:title="@string/tabplayer" />
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_baseline_outdoor_grill_24"
                android:title="@string/statistics" />
            <item
                android:id="@+id/nav_test"
                android:icon="@drawable/ic_baseline_outdoor_grill_24"
                android:title="@string/test" />
        </group>
    </menu>
