<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:elevation="100dp"
    >

    <!--android:background="#00bcd4"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/album_cover"
            android:src="@drawable/ic_item_default_image" />

        <LinearLayout
            android:id="@+id/song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/item_subtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/subtitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>