<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/songTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/albumTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/playlistTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/tabFragmentPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15">

        </androidx.viewpager2.widget.ViewPager2>

        <FrameLayout
            android:id="@+id/tp_controls_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="75">

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>